--- a/Students-v1-1.cbp
+++ b/Students-v1-1.cbp
@@ -34,6 +34,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="calculations.cpp" />
+		<Unit filename="calculations.h" />
+		<Unit filename="functions.cpp" />
+		<Unit filename="functions.h" />
 		<Unit filename="include/Student.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Student.cpp" />
